fix: Update pathfinding and strategies for improved safety and efficiency